# openfga-rs

./: Cargo.toml  LICENSE  README.md
.openapi-generator/: FILES
docs/: Assertion.md  AssertionsApi.md  AuthorizationModel.md  AuthorizationModelsApi.md  CheckRequest.md  Condition.md  ConditionMetadata.md  ConditionParamTypeRef.md  ContextualTupleKeys.md  ErrorCode.md  ExpandRequest.md  ExpandResponse.md  InternalErrorCode.md  InternalErrorMessageResponse.md  Leaf.md  ListObjectsRequest.md  ListStoresResponse.md  Metadata.md  Node.md  Nodes.md  NotFoundErrorCode.md  PathUnknownErrorMessageResponse.md  ReadAssertionsResponse.md  ReadAuthorizationModelResponse.md  ReadAuthorizationModelsResponse.md  ReadChangesResponse.md  ReadRequest.md  ReadResponse.md  RelationMetadata.md  RelationshipQueriesApi.md  RelationshipTuplesApi.md  SourceInfo.md  Status.md  StoresApi.md  StreamResultOfStreamedListObjectsResponse.md  Tuple.md  TupleChange.md  TupleKey.md  TupleOperation.md  TypeDefinition.md  (+14 more)
src/: lib.rs
src/apis/: assertions_api.rs  auth_zen_service_api.rs  authorization_models_api.rs  configuration.rs  mod.rs  relationship_queries_api.rs  relationship_tuples_api.rs  stores_api.rs
src/models/: aborted_message_response.rs  action.rs  action_search_request.rs  action_search_response.rs  any.rs  assertion.rs  assertion_tuple_key.rs  auth_error_code.rs  authorization_model.rs  batch_check_item.rs  batch_check_request.rs  batch_check_response.rs  batch_check_single_result.rs  check_error.rs  check_request.rs  check_request_tuple_key.rs  computed.rs  (+98 more)
tests/: api_integration.rs
