[package]
name = "openfga"
version = "0.1.1"
edition = "2024"
authors = ["tuanla@mirabo-global.com"]
description = "Rust SDK for OpenFGA — the open-source authorization system"
license = "MIT"
repository = "https://github.com/mirabo-global/openfga-rs"
keywords = ["openfga", "authorization", "authz", "zanzibar", "fga"]
categories = ["authentication", "api-bindings", "network-programming"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
url = "2.5"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "query", "stream"] }
percent-encoding = "2"
tokio = { version = "1", features = ["io-util"] }
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
mockito = "1"
serde_json = "1"

[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls"]
rustls = ["reqwest/rustls"]
